# Calc_machime

./: CMakeLists.txt  calculator.cpp  calculator.h  main.cpp  test1  test2  test3  test4  tests.cpp
